--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://carrot2803.github.io/Store-React",
+  "homepage": "http://carrot2803.github.io/Store-UI",
   "name": "shop",
   "version": "0.1.0",
   "private": true,
